public/stylesheets/styles.css
/* ... */
/* Subheading */
header#hero h1 span {
  color: white;
}

/* Instructions for user */
header#hero div#instructions {
  margin: 24px 0 32px;
}

/* Margin for itinerary buttons */
header#hero form {
  margin-bottom: 16px;
}

header#hero form#retrieve-itinerary input {
  padding: 4px 8px;
}

/* Home Page - Favorite Itineraries */

section#favorite-itineraries > h2 {
  color: var(--gold);
  margin: 24px 16px;
  text-align: center;
}

/* Itinerary Cards for Favorite Itineraries */
article#itinerary-cards {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: flex-start;
  gap: 16px;
  margin-bottom: 48px; /* Spacing between the cards and the footer. */
}

/*
Cards have min width of 300px and are allowed to expand to full screen width.
300px is never reached unless the screen is very small.
The widest that a single card can be is about 900px, when it occupies its own row.
*/
article#itinerary-cards > section {
  flex: 1 0 300px;
  border: 1px solid var(--brown);
  display: grid;
  grid-template-columns: 50% 50%; /* Country names are listed in 2 columns. */
  grid-template-rows: 250px 2fr 72px; /* 72px = button height + 32 padding */
  grid-template-areas:
    "image image"
    "list1 list2"
    "button button"
}

/*
A linear gradient is layered on top of background images, to provide contrast for white text.
*/
article#itinerary-cards div.michelin {
  background: linear-gradient(
      0deg,
      rgba(0, 0, 0, 0.75) 0%,
      rgba(0, 0, 0, 0.15) 40%,
      rgba(0, 0, 0, 0) 100%
    ),
    url(/images/itinerary_michelin.jpg);
}

article#itinerary-cards div.oceans {
  background: linear-gradient(
      0deg,
      rgba(0, 0, 0, 0.75) 0%,
      rgba(0, 0, 0, 0.15) 40%,
      rgba(0, 0, 0, 0) 100%
    ),
    url(/images/itinerary_oceans.jpg);
}

article#itinerary-cards div.hikes {
  background: linear-gradient(
      0deg,
      rgba(0, 0, 0, 0.75) 0%,
      rgba(0, 0, 0, 0.15) 40%,
      rgba(0, 0, 0, 0) 100%
    ),
    url(/images/itinerary_hikes.jpg);
}

article#itinerary-cards div.weird-places {
  background: linear-gradient(
      0deg,
      rgba(0, 0, 0, 0.75) 0%,
      rgba(0, 0, 0, 0.15) 40%,
      rgba(0, 0, 0, 0) 100%
    ),
    url(/images/itinerary_weird_places.jpg);
}

article#itinerary-cards div.wonders {
  background: linear-gradient(
      0deg,
      rgba(0, 0, 0, 0.75) 0%,
      rgba(0, 0, 0, 0.15) 40%,
      rgba(0, 0, 0, 0) 100%
    ),
    url(/images/itinerary_wonders.jpg);
}

article#itinerary-cards div.festivals {
  background: linear-gradient(
      0deg,
      rgba(0, 0, 0, 0.75) 0%,
      rgba(0, 0, 0, 0.15) 40%,
      rgba(0, 0, 0, 0) 100%
    ),
    url(/images/itinerary_festivals.jpg);
}

article#itinerary-cards div.itinerary-image-container {
  grid-area: image;
  display: flex;
  padding: 8px 16px;
  background-repeat: no-repeat;
  background-size: cover;
}

article#itinerary-cards h2 {
  align-self: flex-end; /* Vertically align the card title to the bottom. */
  font-family: "Lora", "Times", "Times New Roman", serif;
  font-size: 1.5rem;
  font-weight: 500;
}
article#itinerary-cards ul.destination-list {
  font-size: 1rem;
  padding: 16px;
}

article#itinerary-cards section > ul.destination-list:nth-child(2) {
  grid-area: list1;
}
article#itinerary-cards section > ul.destination-list:nth-child(3) {
  grid-area: list2;
  padding-left: 0;
}

article#itinerary-cards div.button-container {
  grid-area: button;
  padding: 16px;
}

/* === ITINERARY PAGE === */
/* Header section with itinerary info */
header#itinerary-info {
  margin: 32px 0 16px 0;
}

header#itinerary-info h1 {
  font-family: "Lora", "Times", "Times New Roman", serif;
  font-size: 1.6rem;
  font-style: italic;
  color: var(--gold);
  margin: 16px 0;
}

header#itinerary-info > a {
  text-decoration: hsl(42deg, 40%, 50%) underline;
}

/* Section to add destinations */
article#update-destination {
  border: 1px solid var(--brown);
  border-radius: 4px;
  padding: 16px;
  margin: 24px 0 32px;
}

section#add-destination {
  border-top: 1px solid var(--light-green);
  padding: 16px 0;
  margin-top: 16px;
}

section#add-destination .autoComplete_wrapper {
  margin-bottom: 8px;
}

section#randomize-destination {
  /* border-top: 1px solid var(--light-green); */
  padding: 16px 0 0;
}

section#randomize-destination p {
  margin-bottom: 8px;
}

ul#destinations {
  margin-top: 24px;
}

/* Edit itinerary name form */
section#edit-itinerary-name h1 {
  font-family: "Lora", "Times", "Times New Roman", serif;
  font-size: 1.7rem;
  font-style: italic;
  color: var(--gold);
  margin: 32px 0 16px;
}

section#edit-itinerary-name input {
  width: 100%;
  max-width: 600px;
  padding: 4px 8px;
}

section#edit-itinerary-name dd:last-child {
  margin-top: 16px;
}


/* === ITINERARY PAGE - DESTINATION CARDS === */
li.destination-card {
  padding: 16px 0; 
  margin: 0 0 16px;
  border-top: 1px solid var(--light-green);
}

li.destination-card div.banner {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  gap: 12px;
  font-size: 0.9rem;
  margin-bottom: 12px;
}

li.destination-card div.badge {
  flex: 0 0 auto;
  display: flex;
  width: 30px;
  height: 30px;
  justify-content: center;
  align-items: center;
  border: 2px solid var(--light-green);
  border-radius: 100%;
  font-size: 1rem;
  font-weight: 500;
}

li.destination-card div.itinerary-complete {
  border-color: var(--gold);
}

li.destination-card h1 {
  font-size: 1.3rem;
  /* font-weight: 500; */
  color: var(--gold);
}

li.destination-card ul {
  margin-bottom: 16px;
}

/* Add Experience */
div#experiences {
  margin: 16px 0 24px;
}

div#experiences dd {
  display: flex;
  max-width: 500px;
  gap: 8px;
}

/* Add Experience input field */
div#experiences dd input {
  flex: 1;
  border-radius: 3px;
  border: 1px solid grey;
  padding: 4px 0 4px 10px;
  /* background-color: hsl(136deg 28% 95%); */
}
/* ... */

